# PickEmLeagueFrontEnd/ClientApp/openapi.json
@@ -535,6 +535,47 @@
         }
       }
     },
+    "/Image": {
+      "get": {
+        "tags": ["Image"],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int64",
+              "default": 0
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string",
+                  "format": "byte"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "format": "byte"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string",
+                  "format": "byte"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/ScoreSummary/getScoreSummaries": {
       "get": {
         "tags": ["ScoreSummary"],
