# PickEmLeagueFrontEnd/ClientApp/src/Apis/apis/ImageApi.ts
@@ -1,0 +1,54 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * PickEmLeague
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import * as runtime from "../runtime";
+
+export interface ImageGetRequest {
+  userId?: number;
+}
+
+/**
+ *
+ */
+export class ImageApi extends runtime.BaseAPI {
+  /**
+   */
+  async imageGetRaw(
+    requestParameters: ImageGetRequest
+  ): Promise<runtime.ApiResponse<string>> {
+    const queryParameters: runtime.HTTPQuery = {};
+
+    if (requestParameters.userId !== undefined) {
+      queryParameters["userId"] = requestParameters.userId;
+    }
+
+    const headerParameters: runtime.HTTPHeaders = {};
+
+    const response = await this.request({
+      path: `/Image`,
+      method: "GET",
+      headers: headerParameters,
+      query: queryParameters,
+    });
+
+    return new runtime.TextApiResponse(response) as any;
+  }
+
+  /**
+   */
+  async imageGet(requestParameters: ImageGetRequest): Promise<string> {
+    const response = await this.imageGetRaw(requestParameters);
+    return await response.value();
+  }
+}
